# pudata

./: .gitignore  .python-version  README.md  config-test.json  deploy.sh  pyproject.toml
etl/airflow/: requirements.txt  variables-test.json
etl/airflow/dags/: test.py
module/: __init__.py
module/airflow/: conf.py
module/airflow/handler/: telegram_handler.py
module/airflow/pattern/factory/: dag_factory.py
module/utils/conf/: __init__.py  loader.py
module/utils/connector/: telegram_connector.py
