[tool.poetry]
name = "pudata"
version = "0.1.0"
description = "pudata code"
authors = ["mildsalmon <mildsalmon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
pylint = "^2.17.5"
pre-commit = "^3.4.0"
black = {version = "^23.9.1", extras = ["d"]}
apache-airflow = "^2.7.1"
apache-airflow-providers-amazon = "^8.7.1"
boto3 = "^1.28.53"
numpy = "1.23.2"
pandas = "2.0"
pyarrow = "^13.0.0"
pyspark = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
